--- a/mainapp/src/main/resources/application.properties
+++ b/mainapp/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=1234
 spring.datasource.username=postgres
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
