--- a/mainapp/src/main/resources/application.properties
+++ b/mainapp/src/main/resources/application.properties
@@ -3,9 +3,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/microservices
 spring.datasource.password=1234
 spring.datasource.username=postgres
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+
+rabbitmq.pendingproposal.exchange=pending-proposal.ex
