--- a/mainapp/src/main/resources/application.properties
+++ b/mainapp/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-rabbitmq.pendingproposal.exchange=pending-proposal.ex
+rabbitmq.exchange.proposal.pending=pending-proposal.ex
+rabbitmq.exchange.proposal.completed=completed-proposal.ex
+rabbitmq.queue.proposal.completed=completed-proposal.ms-credit-analysis
