--- a/notification.ms/src/main/resources/application.properties
+++ b/notification.ms/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.queue.proposal.pending=pending-proposal.ms-notification
+rabbitmq.queue.proposal.completed=completed-proposal.ms-notification
 
 aws.accesskey=${AWS_ACCESS_KEY}
 aws.secretkey=${AWS_SECRET_KEY}
