feat: dead letter queue

--- a/mainapp/src/main/resources/application.properties
+++ b/mainapp/src/main/resources/application.properties
@@ -9,7 +9,11 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=3
 
 rabbitmq.exchange.proposal.pending=pending-proposal.ex
 rabbitmq.exchange.proposal.completed=completed-proposal.ex
+rabbitmq.exchange.proposal.dead.pending=pending-proposal-dlx.ex
+rabbitmq.exchange.proposal.dead.completed=completed-proposal-dlx.ex
 rabbitmq.queue.proposal.completed=completed-proposal.ms-credit-analysis
