--- a/mainapp/src/main/resources/application.properties
+++ b/mainapp/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=microsservices
-spring.datasource.url=jdbc:postgresql://localhost:5432/microservices
+spring.datasource.url={$SPRING.DATASOURCE.URL}
 spring.datasource.password=1234
 spring.datasource.username=postgres
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.rabbitmq.host=localhost
+spring.rabbitmq.host={$SPRING.RABBITMQ.HOST}
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
